--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
   # 数据源配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.91.131:3306/mredust_sql_generator?useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: # 数据库地址
     username: root
-    password: motianze4
+    password: # 数据库密码
 
 
 server:
